# minimalgotronifylicious

./: .env  .gitignore  Backend_Design_Map_ADHD.md  DOCKER_SETUP.md  Makefile  NEXT-STEPS.md  QUESTIONS.md  README.md  backend_design_digest_plan_adhd_friendly.md  canonical_broker.sh  docker-compose.yml  docker-for-adhd-mind.md  docker-one-shot-setup.sh  docker_for_adhd_lunchbox.drawio  minimalgotronifylicious_ai_architecture.drawio  minimalgotronifylicious_mindmap.drawio  package-lock.json  tree_structure-monorepo.txt  validate_structure.sh
apps/backend/: .dockerignore  .env.example  .env.live  .gitignore  Dockerfile  Dockerfile.dev  FIRST_STEPS.md  INSTALL.md  main.py  pyproject.toml  requirements.in  requirements.txt  setup.py  tree_structure_backend.txt
apps/backend/.github/workflows/: ci.yaml
apps/backend/app/: param_options.py
apps/backend/src/minimalgotronifylicious/: web_socket_manager.py
apps/backend/src/minimalgotronifylicious/api/: routes.py
apps/backend/src/minimalgotronifylicious/brokers/: USAGE.md  abstract_websocket_client.py  angelone_angel_one_client.py  angelone_smart_connect_client.py  angelone_websocket_client.py  interfaces.py  (+4 more)
apps/backend/tests/: test_api_routes.py  test_auto_closed_default.py  test_auto_closed_policy_switch.py  test_binance_client.py  test_config_loader.py  test_factory_exports.py  test_factory_registry.py  test_live_data_like_start_websocket.py  test_live_data_looking_like_start_websocket.py  test_order_client.py  test_order_client_factory.py  test_registry_factory.py  test_routes_unique.py  test_run_live_order.py  test_symbols_provider_solutions.py  test_websocket_manager.py
(+91 files in other folders)
