[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["minimalgotronifylicious*"]

[project]
name = "minimalgotronifylicious"
version = "0.1.0"
description = "Modular trading and analytics tool using WebSockets, observers, and YAML configuration"
authors = [
    { name="Nishith Singhai", email="singhai.nish@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "pyyaml",
    "plotly"
]

[project.scripts]
minimalgotronifylicious-cli = "minimalgotronifylicious.cli.run_client:main"
mg = "minimalgotronifylicious.cli.run_client:main"